--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -36,4 +36,12 @@
 	<string name="x_messages">%1$d Message%2$s</string>
 	<string name="x_location">%1$f, %2$f</string>
 	<string name="location_unknown">Location unknown</string>
+	<string name="send_to_org">Send to Org</string>
+	<string name="share_via">Share Via</string>
+	<string name="choose_an_organization">Choose an organization:</string>
+	<string name="send_encrypted_to_organization">Share encrypted to organization\u2026</string>
+	<string name="sending_encrypted_to_x">Sharing encrypted to %1$s. (Change?)</string>
+	<string name="there_are_no_organizations">There are no organizations for you to send to.  Try sharing the media instead.</string>
+	<string name="sharing_outside_of_informacam">Sharing outside of %1$s means that your media\'s chain-of-custody can be contested.  Share anyway?</string>
+	<string name="export_my_credentials">Export my credentials\u2026</string>
 </resources>
