--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -44,4 +44,5 @@
 	<string name="there_are_no_organizations">There are no organizations for you to send to.  Try sharing the media instead.</string>
 	<string name="sharing_outside_of_informacam">Sharing outside of %1$s means that your media\'s chain-of-custody can be contested.  Share anyway?</string>
 	<string name="export_my_credentials">Export my credentials\u2026</string>
+	<string name="send_message">Send message\u2026</string>
 </resources>
