--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,7 +19,7 @@
 	<string name="cancel">Cancel</string>
 	<string name="pull_down_to_wipe">Pull down to wipe yoru contents</string>
 	<string name="log_out">Log Out</string>
-	<string name="no_new_notifications">No new notifications.</string>
+	<string name="no_notifications">No notifications.</string>
 	<string name="connect_with_organizations">Connect with organizations:</string>
 	<string name="original_images_should_be">Original images should be:</string>
 	<string name="delete">Delete</string>
@@ -40,6 +40,7 @@
 	<string name="share_via">Share Via</string>
 	<string name="choose_an_organization">Choose an organization:</string>
 	<string name="send_encrypted_to_organization">Share encrypted to organization\u2026</string>
+	<string name="send_encrypted_to_x">Share encrypted to %1$s</string>
 	<string name="sending_encrypted_to_x">Sharing encrypted to %1$s. (Change?)</string>
 	<string name="there_are_no_organizations">There are no organizations for you to send to.  Try sharing the media instead.</string>
 	<string name="sharing_outside_of_informacam">Sharing outside of %1$s means that your media\'s chain-of-custody can be contested.  Share anyway?</string>
@@ -47,4 +48,6 @@
 	<string name="send_message">Send message\u2026</string>
 	<string name="notes">Notes</string>
 	<string name="delete_tag">Delete Tag</string>
+	<string name="unverified">Unverified</string>
+	<string name="verified">Verified</string>
 </resources>
