--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -51,4 +51,5 @@
 	<string name="verified">Verified</string>
 	<string name="pull_down_to_wipe">Pull down to wipe your contents</string>
 	<string name="or">\u2014 or \u2014</string>
+	<string name="please_wait">Please wait\u2026</string>
 </resources>
