--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -52,4 +52,8 @@
 	<string name="pull_down_to_wipe">Pull down to wipe your contents</string>
 	<string name="or">\u2014 or \u2014</string>
 	<string name="please_wait">Please wait\u2026</string>
+	<string name="record">Record</string>
+	<string name="resume">Resume</string>
+	<string name="redo">Redo</string>
+	<string name="play">Play</string>
 </resources>
