--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -56,4 +56,12 @@
 	<string name="resume">Resume</string>
 	<string name="redo">Redo</string>
 	<string name="play">Play</string>
+	
+	<string name="preferences">Preferences</string>
+    <string name="prefs_language_title">Language</string>
+    <string name="pref_languages_default">System Default</string>
+    <string name="pref_languages_en_us">English (US)</string>
+    <string name="pref_languages_fr">French</string>
+    <string name="pref_languages_es">Spanish</string>
+    <string name="pref_languages_ar">Arabic</string>
 </resources>
