More language updates

--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -64,4 +64,9 @@
     <string name="pref_languages_fr">French</string>
     <string name="pref_languages_es">Spanish</string>
     <string name="pref_languages_ar">Arabic</string>
+    <string name="pref_languages_no">Norwegian</string>
+    <string name="pref_languages_sv">Swedish</string>
+    <string name="pref_languages_pt_PT">Portuguese (Portugal)</string>
+    <string name="pref_languages_si_LK">Sinhala (Sri Lanka)</string>
+    <string name="pref_languages_tr_TR">Turkish (Turkey)</string>
 </resources>
