--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -56,6 +56,7 @@
 	<string name="resume">Resume</string>
 	<string name="redo">Redo</string>
 	<string name="play">Play</string>
+	<string name="resend_credentials">Resend my credentials \u2026</string>
 	
 	<string name="preferences">Preferences</string>
     <string name="prefs_language_title">Language</string>
