--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -80,6 +80,8 @@
     <string name="menu_panic">Panic</string>
     <string name="menu_settings">Settings</string>
    
+    <string name="home_audio_note">AUDIO NOTE</string>
+    <string name="home_share">SHARE</string>
     <string name="home_gallery_selected">%1$d Selected</string>
     <string name="home_gallery_delete">Delete</string>
 
