--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -60,7 +60,7 @@
 	<string name="play">Play</string>
 	<string name="resend_credentials">Resend my credentials \u2026</string>
 	<string name="retry">Retry</string>
-	<string name="safely_storing_your_picture">Safely storing your picture</string>
+	<string name="your_media_is_being_encoded">Your media is being encoded in such a way that hackers and eavesdroppers cannot see it.</string>
 	
 	<string name="login_open">Open</string>
 	<string name="login_passphrase">Passphrase</string>
@@ -140,7 +140,9 @@
     <string name="shared_days">Shared %1$d days ago</string>
     <string name="shared_day">Shared %1$d day ago</string>
     
-    <string name="sort_date">Date</string>
-    <string name="sort_photos">Photos</string>
-    <string name="sort_videos">Videos</string>
+    <string name="filter_all">All Items</string>
+    <string name="filter_photos">Photos only</string>
+    <string name="filter_videos">Videos only</string>
+    <string name="filter_tagged">Tagged Items</string>
+    <string name="filter_shared">Shared Items</string>
 </resources>
