replaced the derogative use of the word "hackers" ;)

--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -60,7 +60,7 @@
 	<string name="play">Play</string>
 	<string name="resend_credentials">Resend my credentials \u2026</string>
 	<string name="retry">Retry</string>
-	<string name="your_media_is_being_encoded">Your media is being encoded in such a way that hackers and eavesdroppers cannot see it.</string>
+	<string name="your_media_is_being_encoded">Your media is being imported and encrypted.</string>
 	
 	<string name="login_open">Open</string>
 	<string name="login_passphrase">Passphrase</string>
