--- a/app/res/values-en-rUS/strings.xml
+++ b/app/res/values-en-rUS/strings.xml
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <string name="app_name">eyeWitness</string>
+  <string name="app_name">InformaCam</string>
   <string name="photo">Photo</string>
   <string name="video">Video</string>
   <string name="menu_all_media">All Media</string>
