--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">eyeWitness</string>
+    <string name="app_name">InformaCam</string>
 	<string name="photo">Photo</string>
 	<string name="video">Video</string>
 	<string name="menu_all_media">All Media</string>
@@ -107,7 +107,7 @@
     <string name="wizard_ok_next">Okay, next</string>
     <string name="wizard_step_2_of_2">Step 2 of 2:</string>
     <string name="wizard_take_photo_title">Take 6 boring photos to generate your device key.</string>
-    <string name="wizard_key_information">Your key will allow you to be verified by IBA, so that you can share seamlessly and securely.</string>
+    <string name="wizard_key_information">Your key will allow you to be verified, so that you can share seamlessly and securely.</string>
     <string name="wizard_take_photo">Take Photos</string>
     <string name="wizard_take_photo_take">Take</string>
     <string name="wizard_key_is_being_made">Your key is being made, this may take a while.</string>
@@ -128,7 +128,7 @@
 	<string name="editor_save_text">SAVE TEXT</string>
 	    
     <string name="audio_saved_saved">Recording saved.</string>
-    <string name="audio_saved_info">Audio notes are for your reference only, and will not be shared with IBA.</string>
+    <string name="audio_saved_info">Audio notes are for your reference only, and will not be shared.</string>
     <string name="audio_saved_ok">OKAY, THANKS!</string>
     
     <string name="shared_never">Never shared</string>
