add new menu string for J3M export

--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -87,6 +87,8 @@
     <string name="pref_languages_tr_TR">Turkish (Turkey)</string>
     
     <string name="menu_share">Share</string>
+    <string name="menu_share_media">Share Media</string>
+    <string name="menu_share_meta">Share Metadata</string>
     <string name="menu_edit">Edit</string>
     <string name="menu_done">Done</string>
     <string name="menu_save">Save</string>
