--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -97,7 +97,8 @@
     <string name="menu_panic">Panic</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_lock">Lock App</string>
-
+	<string name="menu_view_meta">View Metadata</string>
+	
     <string name="wizard_welcome">Welcome!</string>
     <string name="wizard_choose_language">Choose a language:</string>
     <string name="wizard_get_started">Get started</string>
@@ -159,4 +160,5 @@
     <string name="panic_hint_wipe_content">Swipe down to delete personal data</string>
     <string name="panic_test_successful">Good job! In a real scenario, you would have successfully completed a wipe.</string>
     
+    <string name="prefs_gps_highres">Force GPS High-Res</string>
 </resources>
