add option to share media and public hash ids

--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -98,6 +98,7 @@
     <string name="menu_settings">Settings</string>
     <string name="menu_lock">Lock App</string>
 	<string name="menu_view_meta">View Metadata</string>
+	<string name="menu_share_hash">Share IDs</string>
 	
     <string name="wizard_welcome">Welcome!</string>
     <string name="wizard_choose_language">Choose a language:</string>
