add new proof mode menu toggle

--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -166,5 +166,5 @@
     <string name="prefs_gps_highres">Force GPS High-Res</string>
     <string name="prefs_external_camera">Use External Camera Apps</string>
     
-    <string name="menu_alwayson">Toggle Always-On</string>
+    <string name="menu_alwayson">Proof Mode</string>
 </resources>
