--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -60,7 +60,7 @@
 	<string name="play">Play</string>
 	<string name="resend_credentials">Resend my credentials \u2026</string>
 	<string name="retry">Retry</string>
-	<string name="your_media_is_being_encoded">Your media is being imported and encrypted.</string>
+	<string name="your_media_is_being_encoded">Your media is being processed...</string>
 	
 	<string name="login_open">Open</string>
 	<string name="login_passphrase">Passphrase</string>
@@ -99,8 +99,9 @@
     <string name="menu_settings">Settings</string>
     <string name="menu_lock">Lock App</string>
 	<string name="menu_view_meta">View Metadata</string>
-	<string name="menu_share_hash">Share IDs</string>
-	<string name="menu_creds">Send Credentials</string>
+	<string name="menu_share_hash">Notarize</string>
+	<string name="menu_creds">Share Credentials</string>
+	<string name="menu_export_keys">Backup Keys</string>
 	
     <string name="wizard_welcome">Welcome!</string>
     <string name="wizard_choose_language">Choose a language:</string>
@@ -167,4 +168,6 @@
     <string name="prefs_external_camera">Use External Camera Apps</string>
     
     <string name="menu_alwayson">Proof Mode</string>
+    
+    <string name="_camerav_notarization_id_">#CameraV Notarization ID:</string>
 </resources>
