updates for CameraCipher encrypted camera support additional UI cleanups, improvements as well

--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -174,5 +174,5 @@
     
     <string name="share_from_">"Share from "</string>
     
-    <string name="_id_">" #ID:"</string>
+    <string name="_id_">" ID:"</string>
 </resources>
