support export of encrypted media to unencrypted some apps need to have a local file:/// to work with, and some users want the ability to export to /sdcard for export

--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -175,4 +175,6 @@
     <string name="share_from_">"Share from "</string>
     
     <string name="_id_">" ID:"</string>
+    
+    <string name="prefs_export_local">Copy Shared Media to External Storage (Less Secure)</string>
 </resources>
