--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -176,5 +176,6 @@
     
     <string name="_id_">" ID:"</string>
     
-    <string name="prefs_export_local">Copy Shared Media to External Storage (Less Secure)</string>
+    <string name="prefs_export_local">Export Encrypted Media on Share</string>
+    <string name="prefs_run_foreground">Keep app in foreground</string>
 </resources>
