--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -98,7 +98,8 @@
     <string name="menu_panic">Panic</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_lock">Lock App</string>
-	<string name="menu_view_meta">View Metadata</string>
+	<string name="menu_view_meta">Metadata</string>
+	<string name="menu_view_charts">Charts</string>
 	<string name="menu_share_hash">Notarize</string>
 	<string name="menu_creds">Share Credentials</string>
 	<string name="menu_export_keys">Backup Keys</string>
