--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -205,4 +205,7 @@
     
     <string name="camerav_hash_service">Verify Hash</string>
     <string name="app_name_alt">CV Settings</string>
+    <string name="wifi_networks">Wifi Networks</string>
+    <string name="gps_speed">GPS Speed</string>
+    <string name="gps_altitude">GPS Altitude</string>
 </resources>
